--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sync_helper_flutter
-version: 1.0.0
+version: 1.0.1
 environment:
   sdk: ^3.7.2
   flutter: ">=3.29.3"
@@ -14,3 +14,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 5.0.0
+executables:
+  sync_generator:
