--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,19 @@
 name: sync_helper_flutter
-version: 1.2.0
+version: 1.2.1
 environment:
   sdk: ^3.7.2
   flutter: ">=3.29.3"
 dependencies:
   flutter:
     sdk: flutter
-  http: 1.3.0
-  sqlite_async: 0.11.4
+  http: 1.4.0
+  sqlite_async: 0.11.7
   path_provider: 2.1.5
   uuid: 4.5.1
+  package_info_plus: 8.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 5.0.0
+  flutter_lints: 6.0.0
 executables:
   sync_generator:
