--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: sync_helper_flutter
-version: 1.2.1
+version: 1.2.2
 environment:
-  sdk: ^3.7.2
-  flutter: ">=3.29.3"
+  sdk: '>=3.8.1'
+  flutter: '>=3.32.4'
 dependencies:
   flutter:
     sdk: flutter
@@ -11,6 +11,9 @@ dependencies:
   path_provider: 2.1.5
   uuid: 4.5.1
   package_info_plus: 8.3.0
+  # Sentry for error monitoring & logging – SDK will be initialized by the
+  # application that depends on this library. We only use the APIs.
+  sentry_flutter: 9.0.0-RC.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
