--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,19 @@ environment:
   # The only constraint is on the Flutter framework version. Any Dart SDK
   # version compatible with the selected Flutter version will be used. A
   # minimal Dart SDK lower-bound is still required by pub.
-  sdk: '>=3.8.0'
-  flutter: '>=3.32.4'
+  sdk: '>=3.8.1'
+  flutter: '>=3.32.6'
 dependencies:
   flutter:
     sdk: flutter
-  http: 1.4.0
+  http: 1.5.0-beta.2
   sqlite_async: 0.11.7
   path_provider: 2.1.5
   uuid: 4.5.1
   package_info_plus: 8.3.0
   # Sentry for error monitoring & logging – SDK will be initialized by the
   # application that depends on this library. We only use the APIs.
-  sentry_flutter: 9.0.0
+  sentry_flutter: 9.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
