--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sync_helper_flutter
-version: 1.3.3
+version: 1.3.4
 environment:
   # The only constraint is on the Flutter framework version. Any Dart SDK
   # version compatible with the selected Flutter version will be used. A
@@ -17,6 +17,7 @@ dependencies:
   # Sentry for error monitoring & logging – SDK will be initialized by the
   # application that depends on this library. We only use the APIs.
   sentry_flutter: 9.4.1
+  device_info_plus: ^11.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
